// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpenseSummary correctly with a single expense 1`] = `
<div>
  <p>
    Viewing 
    1
     
    expense
     totalling 
    £39.80
  </p>
</div>
`;

exports[`should render ExpenseSummary correctly with muliple expenses 1`] = `
<div>
  <p>
    Viewing 
    3
     
    expenses
     totalling 
    £53.55
  </p>
</div>
`;

exports[`should render ExpenseSummary correctly with no expenses 1`] = `
<div>
  <p>
    Viewing 
    0
     
    expenses
     totalling 
    £0.00
  </p>
</div>
`;
